2007-10-08  Jakub Jelinek  <jakub@redhat.com>

	* src/space.c (find_readonly_space): Disallow section insertion in
	between adjacent SHT_NOTE sections.  When creating new PT_LOAD,
	handle multiple consecutive SHT_NOTE sections with just one PT_NOTE
	segment for them.
	* testsuite/Makefile.am (TESTS): Add shuffle9.sh.
	* testsuite/Makefile.in: Regenerated.
	* testsuite/shuffle9.sh: New test.
	* testsuite/shuffle9.c: New.

	* testsuite/shuffle2.c: Add .previous at the end of __asm.
	* testsuite/reloc5.c (main): Likewise.

	* testsuite/tls3.sh: If libs aren't built with -fpic,
	disable the test under SELinux in enforcing mode.

	* src/cxx.c: Include alloca.h.
	(specials): Moved out of remove_redundant_cxx_conflicts to toplevel.
	Remove section fields.
	(find_cxx_sym_valsize, find_cxx_sym_cache): New structs.
	(struct find_cxx_sym): Add cache and lastndx fields.
	(cachecmp, create_cache): New functions.
	(find_cxx_sym): Add cache argument.  If cache[n] is NULL, call
	create_cache.  Do a binary search in cache[n]->vals array instead
	of always reading the whole symbol table.
	(remove_redundant_cxx_conflicts): Adjust find_cxx_sym caller.
	Check if secname is ".data" or ".data.rel.ro" instead of comparing
	it against specials[k].secname.  Use binary search in binsymcache
	when doing check_pltref checks.
	* testsuite/Makefile.am (TESTS): Add cxx2.sh.
	* testsuite/Makefile.in: Regenerated.
	* testsuite/cxx1.sh: Check that some conflicts are optimized out
	by C++ optimizations.
	* testsuite/cxx2.sh: New test.
	* testsuite/cxx2.C: New.

2007-10-04  Jakub Jelinek  <jakub@redhat.com>

	* src/prelink.h (read_config): New prototype.
	(gather_config, blacklist_from_config): Remove argument.
	* src/gather.c (struct config_line): New type.
	(config_lines, config_end): New variables.
	(read_config): New function.
	(gather_config, blacklist_from_config): Walk config_lines
	chain instead of reading the config file.
	* src/verify.c (prelink_verify): Call read_config.  Don't